tests/expectations/compiler/function/standard_function_calls_transition_function_fail.out
Error [ETYC0372042]: Only `inline` can be called from a `function`, `inline`, or `constructor`.
    --> compiler-test:4:15
     |
   4 |        return adder(a, b);
     |               ^^^^^^^^^^^
Error [ETYC0372042]: Only `inline` can be called from a `function`, `inline`, or `constructor`.
    --> compiler-test:6:16
     |
   6 |         return subber(a, b);
     |                ^^^^^^^^^^^^
